...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I7T-PE-gR9">
                                <rect key="frame" x="160" y="679" width="94" height="30"/>
                                <state key="normal" title="Sign out">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXf-iP-DBa">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jtd-ZH-nxX">
                                                <rect key="frame" x="0.0" y="48" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Settings.EmailTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="110" width="374" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H3v-3l-Ibe">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YWf-Pm-QKp">
                                                <rect key="frame" x="0.0" y="48" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Settings.UsernameTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="220" width="374" height="82"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhq-ks-nnt">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdD-8X-k8h">
                                                        <rect key="frame" x="347.5" y="0.0" width="26.5" height="34"/>
                                                        <state key="normal" image="eye" catalog="system"/>
                                                        <connections>
                                                            <action selector="viewHidePassword:" destination="GSS-fN-fZW" eventType="touchUpInside" id="nPo-Jk-DgG"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G4K-gS-wT4" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="sED-TL-Lor"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="lbf-qK-drY">
...
