...
        setupTableView()
    }

	override func viewDidAppear(_ animated: Bool) {
		super.viewDidAppear(animated)
        
        searchResultsTableView.accessibilityIdentifier = "searchResultsTable"
        
		checkForBearerToken()
	}
    
    private func setupViews() { // Make everything pretty
        view.backgroundColor = UIColor.titleBarColor
...
                    UIApplication.shared.open(url)
                } else if let url = URL(string: UIApplication.openSettingsURLString) {
                    // If Location Services url is changed in the future, open settings instead
                    UIApplication.shared.open(url)
                }
            }))
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            self.present(alert, animated: true, completion: nil)
        }
    }
    
    @discardableResult private func checkLocationAuthorization() -> Bool { // Check to see if user has authorized location tracking in app
        switch CLLocationManager.authorizationStatus() {
...
