...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghx-Q5-5yx">
                                <rect key="frame" x="157" y="375" width="100" height="33"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="zCJ-as-l7L"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="loginTapped:" destination="60I-QE-HL6" eventType="touchUpInside" id="xhi-m8-psl"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dSw-ao-cLz">
                                <rect key="frame" x="66.5" y="632" width="281" height="30"/>
                                <state key="normal" title="Don't have an account yet? Sign up here!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="8Wa-UK-TTE" kind="show" identifier="ShowSignUpSegue" id="VCn-IN-umQ"/>
                                </connections>
                            </button>
...
