...
                                            <outlet property="foodTruckImageView" destination="Ucc-7f-9bu" id="q3O-ED-wef"/>
                                            <outlet property="nameLabel" destination="iSe-c2-lyK" id="QOD-xc-lvf"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <searchBar contentMode="redraw" placeholder="Search Food Trucks" translatesAutoresizingMaskIntoConstraints="NO" id="K8k-fZ-W8r">
                                <rect key="frame" x="0.0" y="140" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
...
